added challenge assignment

--- a/index.html
+++ b/index.html
@@ -49,22 +49,39 @@
             </div>
         </div>
     </div>
+    <!-- Filter -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <form class="bk-dark">
-                    <p>Filter Search</p>
-                    <ul class="list-group bg-dark">
-                        <li class="list-group-item bg-dark">
-                            <label for="date">Enter Date</label>
-                        </li>
-                        <li class="list-group-item bg-dark">
-                            <input type="text" placeholder="1/10/2010" id="datetime"/>
-                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
-                        </li>
-                    </ul>
-                </form>
+                <div class="filters">
+                    <form class="bk-dark">
+                        <p>Filter Search</p>
+                        <ul class="list-group bg-dark">
+                            <li class="list-group-item bg-dark">
+                                <label for="date">Enter Date</label>
+                                <input type="datetime" placeholder="1/10/2010" class="form-control" id="datetime" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="city">Enter City</label>
+                                <input type="text" placeholder="fresno" class="form-control" id="city" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="state">Enter State</label>
+                                <input type="text" placeholder="ca" class="form-control" id="state" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="country">Enter Country</label>
+                                <input type="text" placeholder="us" class="form-control" id="country" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="shape">Enter Shape</label>
+                                <input type="text" placeholder="triangle" class="form-control" id="shape" />
+                            </li>
+                        </ul>
+                    </form>
+                </div>
             </div>
+            <!-- Table -->
             <div class="col-md-9">
                 <table class="table table-striped">
                     <thead>
